Bigfixes and finish achievements page

--- a/style.css
+++ b/style.css
@@ -142,6 +142,14 @@
   align-items: center;
 }
 
+.heading {
+  font-size: 3em;
+  color: #e7295c;
+  font-family: Arya, Verdana, Geneva, Tahoma, sans-serif;
+  /* reduce spacing between lines */
+  line-height: 1.2em;
+}
+
 .greeting {
   font-size: 3em;
   color: #e7295c;
@@ -235,6 +243,86 @@
   overflow: hidden;
 }
 
+body {
+  padding: 10px;
+  font-family: Nunito, "Work Sans", Verdana, Geneva, Tahoma, sans-serif;
+  transition: background-color 0.4s ease;
+}
+
+body.light-mode {
+  background-color: #f5f5f5;
+  color: black;
+}
+
+body.dark-mode {
+  background-color: #000000;
+  color: white;
+}
+
+/* Hide default HTML checkbox */
+.theme-switcher input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #e1e8f4;
+  /* box-shadow: inset 3px 3px 6px rgb(59, 11, 235); */
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 28px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background: url("./icons/sun.gif");
+  background-size: cover;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #1b242b;
+}
+
+input:hover + .slider {
+  box-shadow: 0 0 2px #000000;
+  transition: all 0.4s ease 0s;
+}
+
+body.dark-mode input:hover + .slider {
+  box-shadow: 0 0 5px #ffffff;
+}
+
+input:checked + .slider:before {
+  background: url("./icons/moon.gif");
+  background-size: cover;
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 /* display only if screen size is small enough */
 @media (max-width: 1109px) {
   .hero-desktop {
@@ -251,7 +339,7 @@
   }
 
   .navbar {
-    height: 20vw;
+    max-height: 10vh;
     margin: auto;
     width: 90%;
     display: flex;
@@ -274,8 +362,9 @@
   }
 
   .navbar .section-name {
-    margin-right: auto;
+    margin-right: min(50px, 10vw);
     vertical-align: middle;
+    text-align: right;
   }
 
   .nav-container {
@@ -284,6 +373,7 @@
     height: 60px;
     align-items: center;
     z-index: 10;
+    width: 100px;
   }
 
   .navbar .menu-items {
@@ -417,86 +507,6 @@
     align-items: center;
     margin-top: 20px;
   }
-}
-
-body {
-  padding: 10px;
-  font-family: Nunito, "Work Sans", Verdana, Geneva, Tahoma, sans-serif;
-  transition: background-color 0.4s ease;
-}
-
-body.light-mode {
-  background-color: #f5f5f5;
-  color: black;
-}
-
-body.dark-mode {
-  background-color: #000000;
-  color: white;
-}
-
-/* Hide default HTML checkbox */
-.theme-switcher input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #e1e8f4;
-  /* box-shadow: inset 3px 3px 6px rgb(59, 11, 235); */
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 28px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background: url("./icons/sun.gif");
-  background-size: cover;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input:checked + .slider {
-  background-color: #1b242b;
-}
-
-input:hover + .slider {
-  box-shadow: 0 0 2px #000000;
-  transition: all 0.4s ease 0s;
-}
-
-body.dark-mode input:hover + .slider {
-  box-shadow: 0 0 5px #ffffff;
-}
-
-input:checked + .slider:before {
-  background: url("./icons/moon.gif");
-  background-size: cover;
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
 }
 
 /* Styles for tablets */
