Complete skills page

--- a/style.css
+++ b/style.css
@@ -135,6 +135,23 @@
   }
 }
 
+@keyframes popIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  60% {
+    opacity: 1;
+    transform: scale(1.05);
+  }
+  80% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 .vertical-flex {
   display: flex;
   flex-direction: column;
